<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="10pt"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"

    tools:context="com.byethost24.mzaleskis.manoknygos.RegisterActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/regusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/reguserpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/reguseremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/regusersubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_submit_btn" />

</LinearLayout>
