<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="10pt"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"

    tools:context="com.byethost24.mzaleskis.manoknygos.LoginActivity">

    <!--

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <!-- komentarai -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="10pt" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/userpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <CheckBox
        android:id="@+id/remember_me_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Prisiminti mane"/>

    <Button
        android:id="@+id/usersubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_submit_btn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/userregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_submit_btn" />

    <!--

    </LinearLayout>

    </ScrollView>

    -->

</LinearLayout>
